# Breakfast-Bar

./: .gitignore  database.py  main.py  pyproject.toml
config/: __init__.py  default.py  development.py  production.py
migrations/versions/: 3e1984c90736_.py  781041a10e32_.py  7b78f864414b_.py  e0e850887593_.py  e8961e598c85_.py
utils/: __init__.py  compatibility.py  error_extractor.py  error_handler.py  file_zipper.py  filename_manager.py  filing_manager.py  log_config.py  mail_manager.py  sys_logger.py  terminal_messenger.py  time_utils.py
website/: __init__.py  models.txt
website/helpers/: __init__.py  code_generator.py  mail_manager.py  route_serializer.py  session_manager.py
website/models/: __init__.py  base.py  base_repository.py  category.py  customer.py  daily_sales_summary.py  events.py  favorite.py  food_item.py  ingredient.py  order.py  order_item.py  order_repository.py  order_service.py  payment.py  points_transaction.py  review.py  user.py
website/modules/routes/: __init__.py  auth.py  portal.py  views.py
website/repositories/: __init__.py  admin_repository.py  base_repository.py  category_repository.py  customer_repository.py  favorite_repository.py  food_item_repository.py  order_repository.py  points_repository.py  review_repository.py  user_repository.py
website/routes/: portal.py  views.py
website/services/: __init__.py  admin_service.py  auth_service.py  dashboard_service.py  menu_service.py  points_service.py
website/static/css/: admin.css  (+8 more)
website/templates/: template.html
website/validators/: __init__.py  validation_result.py
(+65 files in other folders)
