[project]
name = "breakfast-bar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "logging>=0.4.9.6",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
]
